@@ -11,46 +11,60 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Scanner;
 
-/*
-    - SystemManager()
-
-    - visitorMenu(Scanner scanner)
-    - findVisitorByName(String name)
-    - loginVisitor(Scanner scanner)
-    - registerVisitor(Scanner scanner)
-    - visitorOperationsMenu(Visitor visitor, Scanner scanner)
-    - makeReservation(Visitor visitor, Scanner scanner)
-    - cancelReservation(Visitor visitor, Scanner scanner)
-    - updateReservation(Visitor visitor, Scanner scanner)
-    - displayAvailableRoomsAndSlots(Visitor visitor)
-    - applyRewardSystem(Visitor visitor)
-
-    - adminMenu(Scanner scanner)
-    - adminOptions(Scanner scanner)
-    - addSlot(Scanner scanner)
-    - deleteEntity(Scanner scanner)
-        - deleteVisitor(Scanner scanner)
-        - deleteRoom(Scanner scanner)
-        - deleteSlot(Scanner scanner)
-    - displayAllAvailableSlots()
-    - displayAllVisitors()
-    - displayAllRooms()
-    - displayAllInstructors()
-    - calculateTotalFees()
-    - updateEntity(Scanner scanner)
-        - updateVisitor(Scanner scanner)
-        - updateRoom(Scanner scanner)
-        - updateSlot(Scanner scanner)
-*/
-
 public class SystemManager {
 
+    // -------> Constants
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ISO_LOCAL_DATE;
     private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm");
-    protected ArrayList<Visitor> visitors;
-    private Admin admin;
-    protected ArrayList<Room> rooms;
 
+    // -------> Fields
+    protected ArrayList<Visitor> visitors;
+    protected ArrayList<Room> rooms;
+    private Admin admin;
+
+    /*
+        - SystemManager()
+
+        - Visitor Operations
+            - visitorMenu(Scanner scanner)
+            - findVisitorByName(String name)
+            - loginVisitor(Scanner scanner)
+            - registerVisitor(Scanner scanner)
+            - visitorOperationsMenu(Visitor visitor, Scanner scanner)
+            - makeReservation(Visitor visitor, Scanner scanner)
+            - cancelReservation(Visitor visitor, Scanner scanner)
+            - joinReservation(Visitor visitor, Scanner scanner)
+            - updateReservation(Visitor visitor, Scanner scanner)
+            - displayAvailableRoomsAndSlots(Visitor visitor)
+            - applyRewardSystem(Visitor visitor)
+            - LeaderBoardForVisitor()
+
+        - Admin Operations
+            - adminMenu(Scanner scanner)
+            - adminOptions(Scanner scanner)
+            - addSlot(Scanner scanner)
+            - deleteEntity(Scanner scanner)
+                - deleteVisitor(Scanner scanner)
+                - deleteRoom(Scanner scanner)
+                - deleteSlot(Scanner scanner)
+            - updateEntity(Scanner scanner)
+                - updateVisitor(Scanner scanner)
+                - updateRoom(Scanner scanner)
+                - updateSlot(Scanner scanner)
+            - displayAllAvailableSlots()
+            - displayAllVisitors()
+            - displayAllRooms()
+            - displayAllInstructors()
+            - calculateTotalFees()
+            - LeaderBoardForAdmin(Scanner scanner)
+            - emptySafe(Scanner scanner)
+
+        - Utility Methods
+            - findRoomById(int id)
+            - savedata()
+    */
+
+    // -------> Constructor
     public SystemManager() {
         visitors = FileHandler.loadVisitors("CoWorkingSpace/src/services/visitors.txt");
         rooms = FileHandler.loadRooms("CoWorkingSpace/src/services/rooms.txt", visitors);
@@ -60,62 +74,63 @@ public class SystemManager {
         }
     }
 
+    // -------> Initialization Methods
     private void initializeRooms() {
-        // Room room = new GeneralRoom("General Room 1", 1);
-        // room.addSlotVisitors(new Slot("10:00", "2024-12-1", 15, true));
-        // rooms.add(room);
-
-        // room = new GeneralRoom("General Room 2", 2);
-        // room.addSlotVisitors(new Slot("10:00", "2024-12-1", 15, true));
-        // rooms.add(room);
-
-        // room = new MeetingRoom("Meeting Room 1", 3);
-        // room.addSlotVisitors(new Slot("10:00", "2024-12-1", 15, true));
-        // rooms.add(room);
-
-        // room = new MeetingRoom("Meeting Room 2", 4);
-        // room.addSlotVisitors(new Slot("10:00", "2024-12-1", 15, true));
-        // rooms.add(room);
-
-        // room = new TeachingRoom("Teaching Room 1", 5, "4K", "Whiteboard", "Ali");
-        // room.addSlotVisitors(new Slot("10:00", "2024-12-1", 15, true));
-        // rooms.add(room);
         LocalDate initialDate = LocalDate.parse("2024-12-01", DATE_FORMATTER);
-            LocalTime initialTime = LocalTime.parse("10:00", TIME_FORMATTER);
-            Room room = new GeneralRoom("General Room 1", 1);
-            room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
-            rooms.add(room);
-            room = new GeneralRoom("General Room 2", 2);
-            room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
-            rooms.add(room);
-            room = new MeetingRoom("Meeting Room 1", 3);
-            room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
-            rooms.add(room);
-            room = new MeetingRoom("Meeting Room 2", 4);
-            room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
-            rooms.add(room);
-            room = new TeachingRoom("Teaching Room 1", 5, "4K", "Whiteboard", "Ali");
-            room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
-            rooms.add(room);
+        LocalTime initialTime = LocalTime.parse("10:00", TIME_FORMATTER);
+
+        Room room = new GeneralRoom("General Room 1", 1);
+        room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
+        rooms.add(room);
+
+        room = new GeneralRoom("General Room 2", 2);
+        room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
+        rooms.add(room);
+
+        room = new MeetingRoom("Meeting Room 1", 3);
+        room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
+        rooms.add(room);
+
+        room = new MeetingRoom("Meeting Room 2", 4);
+        room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
+        rooms.add(room);
+
+        room = new TeachingRoom("Teaching Room 1", 5, "4K", "Whiteboard", "Ali");
+        room.addSlotVisitors(new Slot(initialTime, initialDate, 15, true));
+        rooms.add(room);
     }
 
-    public Room findRoomById(int id){
-        Room selectedRoom = null;
+    // -------> Utility Methods
+    public Room findRoomById(int id) {
         for (Room room : rooms) {
-            if(room.getID()==id){
-                selectedRoom = room;
+            if (room.getID() == id) {
+                return room;
             }
         }
-        return selectedRoom;
+        return null;
     }
+
+    public void savedata() {
+        FileHandler.saveVisitors("CoWorkingSpace/src/services/visitors.txt", visitors);
+        FileHandler.saveRooms("CoWorkingSpace/src/services/rooms.txt", rooms);
+    }
+
+    // -------> Visitor Operations
 
     public void visitorMenu(Scanner scanner) {
         System.out.println("1. Login");
         System.out.println("2. Register");
         System.out.println("3. Back to Main Menu");
         System.out.print("Choose an option: ");
-        int choice = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int choice;
+
+        try {
+            choice = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid input! Please enter a number corresponding to the options.");
+            return;
+        }
 
         switch (choice) {
             case 1 -> loginVisitor(scanner);
@@ -123,21 +138,22 @@ public class SystemManager {
             case 3 -> System.out.println("Returning to main menu...");
             default -> System.out.println("Invalid option! Please try again.");
         }
-        savedata();
     }
 
     public Visitor findVisitorByName(String name) {
         for (Visitor visitor : visitors) {
-            if (visitor.getName().equalsIgnoreCase(name)) return visitor;
+            if (visitor.getName().equalsIgnoreCase(name)) {
+                return visitor;
+            }
         }
         return null;
     }
 
     private void loginVisitor(Scanner scanner) {
         System.out.print("Enter your name: ");
-        String name = scanner.nextLine();
+        String name = scanner.nextLine().trim();
         System.out.print("Enter your password: ");
-        String password = scanner.nextLine();
+        String password = scanner.nextLine().trim();
 
         Visitor visitor = findVisitorByName(name);
         if (visitor != null && visitor.getPassword().equals(password)) {
@@ -150,17 +166,24 @@ public class SystemManager {
 
     private void registerVisitor(Scanner scanner) {
         System.out.print("Enter your name: ");
-        String name = scanner.nextLine();
+        String name = scanner.nextLine().trim();
         System.out.print("Create a password: ");
-        String password = scanner.nextLine();
+        String password = scanner.nextLine().trim();
 
         System.out.println("Select your type:");
         System.out.println("1. General");
         System.out.println("2. Formal");
         System.out.println("3. Instructor");
         System.out.print("Choose an option: ");
-        int typeChoice = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int typeChoice;
+
+        try {
+            typeChoice = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid choice! Defaulting to 'General'.");
+            typeChoice = 1;
+        }
 
         String type = switch (typeChoice) {
             case 1 -> "general";
@@ -180,6 +203,7 @@ public class SystemManager {
 
     private void visitorOperationsMenu(Visitor visitor, Scanner scanner) {
         while (true) {
+            System.out.println("\n--- Visitor Operations Menu ---");
             System.out.println("1. Join Reservation");
             System.out.println("2. Make Reservation");
             System.out.println("3. Cancel Reservation");
@@ -188,8 +212,15 @@ public class SystemManager {
             System.out.println("6. Display Leader Board");
             System.out.println("7. Logout");
             System.out.print("Choose an option: ");
-            int choice = scanner.nextInt();
-            scanner.nextLine();
+            String input = scanner.nextLine().trim();
+            int choice;
+
+            try {
+                choice = Integer.parseInt(input);
+            } catch (NumberFormatException e) {
+                System.out.println("Invalid input! Please enter a number corresponding to the options.");
+                continue;
+            }
 
             switch (choice) {
                 case 1 -> joinReservation(visitor, scanner);
@@ -208,28 +239,29 @@ public class SystemManager {
         }
     }
 
-    public void LeaderBoardForVisitor(){
-            visitors.sort(Comparator.comparingInt(Visitor::getHoursReserved).reversed());
+    public void LeaderBoardForVisitor() {
+        visitors.sort(Comparator.comparingInt(Visitor::getHoursReserved).reversed());
 
-            for (Visitor visitor : visitors) {
-                visitor.displayDetails();
-            }
+        System.out.println("\n--- Leader Board ---");
+        for (Visitor visitor : visitors) {
+            visitor.displayDetails();
+        }
     }
 
-    public void joinReservation(Visitor visitor, Scanner scanner){
+    public void joinReservation(Visitor visitor, Scanner scanner) {
         System.out.print("Enter Your Join Code (format: roomId&date&time): ");
         String code = scanner.nextLine().trim();
-    
+
         String[] data = code.split("&");
         if (data.length != 3) {
             System.out.println("Invalid join code format. Please use 'roomId&date&time'.");
             return;
         }
-    
+
         int roomId;
         LocalDate slotDate;
         LocalTime slotTime;
-    
+
         // Parse the join code components with error handling
         try {
             roomId = Integer.parseInt(data[0].trim());
@@ -239,13 +271,13 @@ public class SystemManager {
             System.out.println("Invalid join code components: " + e.getMessage());
             return;
         }
-    
+
         Room selectedRoom = findRoomById(roomId);
         if (selectedRoom == null) {
             System.out.println("No room found with ID " + roomId + ".");
             return;
         }
-    
+
         Slot selectedSlot = null;
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (slot.getDate().equals(slotDate) && slot.getTime().equals(slotTime)) {
@@ -253,18 +285,18 @@ public class SystemManager {
                 break;
             }
         }
-    
+
         if (selectedSlot == null) {
             System.out.println("No slot found on " + slotDate + " at " + slotTime + ".");
             return;
         }
-    
+
         List<Visitor> slotVisitors = selectedRoom.getSlotVisitors(selectedSlot);
         if (slotVisitors.contains(visitor)) {
             System.out.println("You have already joined this reservation.");
             return;
         }
-    
+
         boolean added = selectedRoom.addSlotVisitors(visitor, selectedSlot);
         if (added) {
             boolean useFreeHour = false;
@@ -272,7 +304,7 @@ public class SystemManager {
                 while (true) {
                     System.out.print("You have " + visitor.getHoursRewarded() + " free hour(s). Do you want to use a free hour for this reservation? (yes/no): ");
                     String response = scanner.nextLine().trim().toLowerCase();
-    
+
                     if (response.equals("yes") || response.equals("y")) {
                         useFreeHour = true;
                         visitor.decrementHoursRewarded(1);
@@ -286,11 +318,11 @@ public class SystemManager {
                     }
                 }
             }
-    
+
             if (!useFreeHour) {
                 double reservationFee = selectedSlot.getFees();
                 boolean validChoice = false;
-    
+
                 while (!validChoice) {
                     System.out.println("\nPayment Options:");
                     System.out.println("1. Pay this reservation's fee now.");
@@ -298,51 +330,48 @@ public class SystemManager {
                     System.out.println("3. Skip payment for now (fees will be added to your account).");
                     System.out.print("Choose an option (1/2/3): ");
                     String paymentChoice = scanner.nextLine().trim();
-    
+
                     switch (paymentChoice) {
                         case "1":
-                    // Pay this reservation's fee
-                    visitor.setPayedFees(visitor.getPayedFees() + reservationFee);
-                    System.out.println("Fees of $" + reservationFee + " have been paid and added to your account.");
-                    validChoice = true;
-                    break;
-                case "2":
-                    // Pay total accumulated fees
-                    double totalFees = visitor.getTotalFees();
-                    if (totalFees > 0) {
-                        visitor.setPayedFees(visitor.getPayedFees() + totalFees);
-                        visitor.setTotalFees(0);
-                        System.out.println("Total fees of $" + totalFees + " have been paid and your account balance is now $0.");
-                    } else {
-                        System.out.println("You have no accumulated fees to pay.");
+                            // Pay this reservation's fee
+                            visitor.payPenaltyFees();
+                            System.out.println("Fees of $" + reservationFee + " have been paid and added to your account.");
+                            validChoice = true;
+                            break;
+                        case "2":
+                            // Pay total accumulated fees
+                            double totalFees = visitor.getTotalFees();
+                            if (totalFees > 0) {
+                                visitor.payTotalFees();
+                                System.out.println("Total fees of $" + totalFees + " have been paid and your account balance is now $0.");
+                            } else {
+                                System.out.println("You have no accumulated fees to pay.");
+                            }
+                            validChoice = true;
+                            break;
+                        case "3":
+                            // Add reservation fee to total fees
+                            visitor.setTotalFees(reservationFee);
+                            System.out.println("Fees of $" + reservationFee + " have been added to your account.");
+                            validChoice = true;
+                            break;
+                        default:
+                            System.out.println("Invalid choice. Please select option 1, 2, or 3.");
                     }
-                    validChoice = true;
-                    break;
-                case "3":
-                    // Add reservation fee to total fees
-                    visitor.setTotalFees(visitor.getTotalFees() + reservationFee);
-                    System.out.println("Fees of $" + reservationFee + " have been added to your account.");
-                    validChoice = true;
-                    break;
-                default:
-                    System.out.println("Invalid choice. Please select option 1, 2, or 3.");
-                }
                 }
             } else {
                 System.out.println("You have used a free hour. No fees charged for this reservation.");
             }
-    
+
             visitor.incrementHoursReserved(1);
             System.out.println("Successfully joined the reservation for " + selectedRoom.getName() + " on " +
                     slotDate + " at " + slotTime + ".");
             System.out.println("Your Join Code: " + selectedRoom.getID() + "&" + slotDate + "&" + slotTime);
             applyRewardSystem(visitor);
-            savedata();
         } else {
             System.out.println("Failed to join the reservation. The slot might be full.");
         }
     }
-    
 
     public void makeReservation(Visitor visitor, Scanner scanner) {
         ArrayList<Room> availableRooms = displayAvailableRoomsAndSlots(visitor);
@@ -350,37 +379,43 @@ public class SystemManager {
             System.out.println("No available rooms or slots for your type of visit.");
             return;
         }
+
         System.out.print("Enter room ID to reserve: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
-        Room selectedRoom = null;
-        for (Room room : availableRooms) {
-            if (room.getID() == roomId) {
-                selectedRoom = room;
-                break;
-            }
+        String input = scanner.nextLine().trim();
+        int roomId;
+
+        try {
+            roomId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid room ID format. Please enter a numeric value.");
+            return;
         }
+
+        Room selectedRoom = findRoomById(roomId);
         if (selectedRoom == null) {
             System.out.println("Invalid room ID. Please try again.");
             return;
         }
+
         ArrayList<Slot> availableSlots = new ArrayList<>();
+        System.out.println("Available Slots in " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (slot.isAvailable()) {
                 availableSlots.add(slot);
-                System.out.println("  Slot: " + slot.getDate() + " at " + slot.getTime());
+                System.out.println("  Slot: " + slot.getDate().format(DATE_FORMATTER) + " at " + slot.getTime().format(TIME_FORMATTER));
             }
         }
+
         if (availableSlots.isEmpty()) {
             System.out.println("No available slots for this room.");
             return;
         }
+
         System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to reserve: ");
-        String dateInput = scanner.nextLine();
-        System.out.print("Enter the time (hh:mm) of the slot you want to reserve: ");
-        String timeInput = scanner.nextLine();
-    
-        Slot selectedSlot=null;
+        String dateInput = scanner.nextLine().trim();
+        System.out.print("Enter the time (HH:mm) of the slot you want to reserve: ");
+        String timeInput = scanner.nextLine().trim();
+
         LocalDate selectedDate;
         LocalTime selectedTime;
         try {
@@ -391,22 +426,25 @@ public class SystemManager {
             return;
         }
 
+        Slot selectedSlot = null;
         for (Slot slot : availableSlots) {
-            if(slot.getDate().equals(selectedDate)&&slot.getTime().equals(selectedTime)){
-                selectedSlot=slot;
+            if (slot.getDate().equals(selectedDate) && slot.getTime().equals(selectedTime)) {
+                selectedSlot = slot;
+                break;
             }
         }
 
         if (selectedSlot == null) {
             System.out.println("Invalid slot. Please try again.");
             return;
-        }    
+        }
+
         boolean useFreeHour = false;
-        if (visitor.getHoursRewarded() > 0) { // Correct method name
-            while (true) { // Loop until valid input
+        if (visitor.getHoursRewarded() > 0) {
+            while (true) {
                 System.out.print("You have " + visitor.getHoursRewarded() + " free hour(s). Do you want to use a free hour for this reservation? (yes/no): ");
                 String response = scanner.nextLine().trim().toLowerCase();
-    
+
                 if (response.equals("yes") || response.equals("y")) {
                     useFreeHour = true;
                     visitor.decrementHoursRewarded(1);
@@ -420,69 +458,60 @@ public class SystemManager {
                 }
             }
         }
-    
-        
 
-            // Reserve the slot
-    selectedSlot.setAvailable(false);
-    selectedRoom.addSlotVisitors(visitor, selectedSlot);
-    visitor.incrementHoursReserved(1);
+        // Reserve the slot
+        selectedSlot.setAvailable(false);
+        selectedRoom.addSlotVisitors(visitor, selectedSlot);
+        visitor.incrementHoursReserved(1);
 
-    if (!useFreeHour) {
-        double reservationFee = selectedSlot.getFees();
-        boolean validChoice = false;
+        if (!useFreeHour) {
+            double reservationFee = selectedSlot.getFees();
+            boolean validChoice = false;
 
-        while (!validChoice) {
-            System.out.println("\nPayment Options:");
-            System.out.println("1. Pay this reservation's fee now.");
-            System.out.println("2. Pay your total accumulated fees now.");
-            System.out.println("3. Skip payment for now (fees will be added to your account).");
-            System.out.print("Choose an option (1/2/3): ");
-            String paymentChoice = scanner.nextLine().trim();
+            while (!validChoice) {
+                System.out.println("\nPayment Options:");
+                System.out.println("1. Pay this reservation's fee now.");
+                System.out.println("2. Pay your total accumulated fees now.");
+                System.out.println("3. Skip payment for now (fees will be added to your account).");
+                System.out.print("Choose an option (1/2/3): ");
+                String paymentChoice = scanner.nextLine().trim();
 
-            switch (paymentChoice) {
-                case "1":
-                    // Pay this reservation's fee
-                    visitor.setPayedFees(visitor.getPayedFees() + reservationFee);
-                    System.out.println("Fees of $" + reservationFee + " have been paid and added to your account.");
-                    validChoice = true;
-                    break;
-                case "2":
-                    // Pay total accumulated fees
-                    double totalFees = visitor.getTotalFees();
-                    if (totalFees > 0) {
-                        visitor.setPayedFees(visitor.getPayedFees() + totalFees);
-                        visitor.setTotalFees(0);
-                        System.out.println("Total fees of $" + totalFees + " have been paid and your account balance is now $0.");
-                    } else {
-                        System.out.println("You have no accumulated fees to pay.");
-                    }
-                    validChoice = true;
-                    break;
-                case "3":
-                    // Add reservation fee to total fees
-                    visitor.setTotalFees(visitor.getTotalFees() + reservationFee);
-                    System.out.println("Fees of $" + reservationFee + " have been added to your account.");
-                    validChoice = true;
-                    break;
-                default:
-                    System.out.println("Invalid choice. Please select option 1, 2, or 3.");
+                switch (paymentChoice) {
+                    case "1":
+                        // Pay this reservation's fee
+                        visitor.payTotalFees();
+                        System.out.println("Fees of $" + reservationFee + " have been paid and added to your account.");
+                        validChoice = true;
+                        break;
+                    case "2":
+                        // Pay total accumulated fees
+                        double totalFees = visitor.getTotalFees();
+                        if (totalFees > 0) {
+                            visitor.payTotalFees();
+                            System.out.println("Total fees of $" + totalFees + " have been paid and your account balance is now $0.");
+                        } else {
+                            System.out.println("You have no accumulated fees to pay.");
+                        }
+                        validChoice = true;
+                        break;
+                    case "3":
+                        // Add reservation fee to total fees
+                        visitor.setTotalFees(reservationFee);
+                        System.out.println("Fees of $" + reservationFee + " have been added to your account.");
+                        validChoice = true;
+                        break;
+                    default:
+                        System.out.println("Invalid choice. Please select option 1, 2, or 3.");
+                }
             }
+        } else {
+            System.out.println("You have used a free hour. No fees charged for this reservation.");
         }
-    } else {
-        System.out.println("You have used a free hour. No fees charged for this reservation.");
-    }
 
-    System.out.println("Reservation successful for " + selectedRoom.getName() + " on " + selectedDate + " at " + selectedTime);
-    System.out.println("Your Join Code: " + selectedRoom.getID() + "&" + selectedDate + "&" + selectedTime);
+        System.out.println("Reservation successful for " + selectedRoom.getName() + " on " + selectedDate + " at " + selectedTime);
+        System.out.println("Your Join Code: " + selectedRoom.getID() + "&" + selectedDate + "&" + selectedTime);
 
-    applyRewardSystem(visitor);
-
-    }
-
-    public void savedata() {
-        FileHandler.saveVisitors("CoWorkingSpace/src/services/visitors.txt", visitors);
-        FileHandler.saveRooms("CoWorkingSpace/src/services/rooms.txt", rooms);
+        applyRewardSystem(visitor);
     }
 
     public void cancelReservation(Visitor visitor, Scanner scanner) {
@@ -496,6 +525,7 @@ public class SystemManager {
                 }
             }
         }
+
         if (roomsWithReservations.isEmpty()) {
             System.out.println("You don't have any reservations to cancel.");
             return;
@@ -507,8 +537,15 @@ public class SystemManager {
         }
 
         System.out.print("Enter room ID to cancel reservation: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int roomId;
+
+        try {
+            roomId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid room ID format. Please enter a numeric value.");
+            return;
+        }
 
         Room selectedRoom = null;
         for (Room room : roomsWithReservations) {
@@ -524,10 +561,11 @@ public class SystemManager {
         }
 
         ArrayList<Slot> reservedSlots = new ArrayList<>();
+        System.out.println("Reserved Slots in " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (!slot.isAvailable() && selectedRoom.getSlotVisitors(slot).contains(visitor)) {
                 reservedSlots.add(slot);
-                System.out.println("Reserved Slot: " + slot.getDate() + " at " + slot.getTime());
+                System.out.println("  Slot: " + slot.getDate().format(DATE_FORMATTER) + " at " + slot.getTime().format(TIME_FORMATTER));
             }
         }
 
@@ -537,11 +575,10 @@ public class SystemManager {
         }
 
         System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to cancel: ");
-        String dateInput = scanner.nextLine();
-        System.out.print("Enter the time (hh:mm) of the slot you want to cancel: ");
-        String timeInput = scanner.nextLine();
+        String dateInput = scanner.nextLine().trim();
+        System.out.print("Enter the time (HH:mm) of the slot you want to cancel: ");
+        String timeInput = scanner.nextLine().trim();
 
-        Slot selectedSlot=null;
         LocalDate selectedDate;
         LocalTime selectedTime;
         try {
@@ -552,9 +589,11 @@ public class SystemManager {
             return;
         }
 
+        Slot selectedSlot = null;
         for (Slot slot : reservedSlots) {
-            if(slot.getDate().equals(selectedDate)&&slot.getTime().equals(selectedTime)){
-                selectedSlot=slot;
+            if (slot.getDate().equals(selectedDate) && slot.getTime().equals(selectedTime)) {
+                selectedSlot = slot;
+                break;
             }
         }
 
@@ -595,8 +634,15 @@ public class SystemManager {
         }
 
         System.out.print("Enter room ID to update reservation: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int roomId;
+
+        try {
+            roomId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid room ID format. Please enter a numeric value.");
+            return;
+        }
 
         Room selectedRoom = null;
         for (Room room : roomsWithReservations) {
@@ -612,10 +658,11 @@ public class SystemManager {
         }
 
         ArrayList<Slot> reservedSlots = new ArrayList<>();
+        System.out.println("Reserved Slots in " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (!slot.isAvailable() && selectedRoom.getSlotVisitors(slot).contains(visitor)) {
                 reservedSlots.add(slot);
-                System.out.println("Reserved Slot: " + slot.getDate() + " at " + slot.getTime());
+                System.out.println("  Slot: " + slot.getDate().format(DATE_FORMATTER) + " at " + slot.getTime().format(TIME_FORMATTER));
             }
         }
 
@@ -625,11 +672,10 @@ public class SystemManager {
         }
 
         System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to update: ");
-        String dateInput = scanner.nextLine();
-        System.out.print("Enter the time (hh:mm) of the slot you want to update: ");
-        String timeInput = scanner.nextLine();
+        String dateInput = scanner.nextLine().trim();
+        System.out.print("Enter the time (HH:mm) of the slot you want to update: ");
+        String timeInput = scanner.nextLine().trim();
 
-        Slot selectedSlot=null;
         LocalDate selectedDate;
         LocalTime selectedTime;
         try {
@@ -640,9 +686,11 @@ public class SystemManager {
             return;
         }
 
+        Slot selectedSlot = null;
         for (Slot slot : reservedSlots) {
-            if(slot.getDate().equals(selectedDate)&&slot.getTime().equals(selectedTime)){
-                selectedSlot=slot;
+            if (slot.getDate().equals(selectedDate) && slot.getTime().equals(selectedTime)) {
+                selectedSlot = slot;
+                break;
             }
         }
 
@@ -654,20 +702,20 @@ public class SystemManager {
         System.out.println("Available slots for " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (slot.isAvailable()) {
-                System.out.println("  Slot: " + slot.getDate() + " at " + slot.getTime());
+                System.out.println("  Slot: " + slot.getDate().format(DATE_FORMATTER) + " at " + slot.getTime().format(TIME_FORMATTER));
             }
         }
 
         System.out.print("Enter the new date (yyyy-mm-dd) for the slot: ");
-        String newDatestr = scanner.nextLine();
-        System.out.print("Enter the new time (hh:mm) for the slot: ");
-        String newTimestr = scanner.nextLine();
+        String newDateStr = scanner.nextLine().trim();
+        System.out.print("Enter the new time (HH:mm) for the slot: ");
+        String newTimeStr = scanner.nextLine().trim();
 
-        LocalDate NewDate;
-        LocalTime NewTime;
+        LocalDate newDate;
+        LocalTime newTime;
         try {
-            NewDate = LocalDate.parse(newDatestr, DATE_FORMATTER);
-            NewTime= LocalTime.parse(newTimestr, TIME_FORMATTER);
+            newDate = LocalDate.parse(newDateStr, DATE_FORMATTER);
+            newTime = LocalTime.parse(newTimeStr, TIME_FORMATTER);
         } catch (DateTimeParseException e) {
             System.out.println("Invalid date/time format: " + e.getMessage());
             return;
@@ -675,7 +723,7 @@ public class SystemManager {
 
         Slot newSlot = null;
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
-            if (slot.getDate().equals(NewDate) && slot.getTime().equals(NewTime) && slot.isAvailable()) {
+            if (slot.getDate().equals(newDate) && slot.getTime().equals(newTime) && slot.isAvailable()) {
                 newSlot = slot;
                 break;
             }
@@ -686,6 +734,7 @@ public class SystemManager {
             return;
         }
 
+        // Update the reservation
         selectedSlot.setAvailable(true);
         selectedRoom.removeVisitor(visitor, selectedSlot);
 
@@ -695,30 +744,40 @@ public class SystemManager {
         visitor.setTotalFees(newSlot.getFees());
 
         System.out.println("Reservation updated for " + selectedRoom.getName() + " from " + selectedDate + " at " + selectedTime +
-                " to " + NewDate + " at " + NewTime);
+                " to " + newDate + " at " + newTime);
     }
 
     public ArrayList<Room> displayAvailableRoomsAndSlots(Visitor visitor) {
         System.out.println("\nDisplaying available rooms and slots...");
         ArrayList<Room> availableRooms = new ArrayList<>();
         for (Room room : rooms) {
-            if ((room instanceof GeneralRoom && visitor.getType().equalsIgnoreCase("general")) ||
-                    (room instanceof MeetingRoom && visitor.getType().equalsIgnoreCase("formal")) ||
-                    (room instanceof TeachingRoom && visitor.getType().equalsIgnoreCase("instructor"))) {
-                boolean roomHasAvailableSlots = false;
+            boolean isEligible = false;
+            if (room instanceof GeneralRoom && visitor.getType().equalsIgnoreCase("general")) {
+                isEligible = true;
+            } else if (room instanceof MeetingRoom && visitor.getType().equalsIgnoreCase("formal")) {
+                isEligible = true;
+            } else if (room instanceof TeachingRoom && visitor.getType().equalsIgnoreCase("instructor")) {
+                isEligible = true;
+            }
+
+            if (!isEligible) {
+                continue;
+            }
+
+            boolean roomHasAvailableSlots = false;
+            for (Slot slot : room.getVisitorsInEachSlot().keySet()) {
+                if (slot.isAvailable()) {
+                    roomHasAvailableSlots = true;
+                    break;
+                }
+            }
+
+            if (roomHasAvailableSlots) {
+                availableRooms.add(room);
+                room.displayDetails();
                 for (Slot slot : room.getVisitorsInEachSlot().keySet()) {
                     if (slot.isAvailable()) {
-                        roomHasAvailableSlots = true;
-                        break;
-                    }
-                }
-                if (roomHasAvailableSlots) {
-                    availableRooms.add(room);
-                    room.displayDetails();
-                    for (Slot slot : room.getVisitorsInEachSlot().keySet()) {
-                        if (slot.isAvailable()) {
-                            System.out.println("  Slot: " + slot.getDate() + " at " + slot.getTime());
-                        }
+                        System.out.println("  Slot: " + slot.getDate().format(DATE_FORMATTER) + " at " + slot.getTime().format(TIME_FORMATTER));
                     }
                 }
             }
@@ -730,16 +789,20 @@ public class SystemManager {
         int generalVisitorRewardThreshold = 6;
         int instructorVisitorRewardThreshold = 12;
         int rewardHours = 0;
-        if (visitor.getType().equalsIgnoreCase("instructor")) {
-            if(visitor.getHoursReserved() % instructorVisitorRewardThreshold==0&&visitor.getHoursReserved()>0){rewardHours++;};
-        } else {
-            if(visitor.getHoursReserved() % generalVisitorRewardThreshold==0&&visitor.getHoursReserved()>0){rewardHours++;};
 
+        if (visitor.getType().equalsIgnoreCase("instructor")) {
+            if (visitor.getHoursReserved() % instructorVisitorRewardThreshold == 0 && visitor.getHoursReserved() > 0) {
+                rewardHours++;
+            }
+        } else {
+            if (visitor.getHoursReserved() % generalVisitorRewardThreshold == 0 && visitor.getHoursReserved() > 0) {
+                rewardHours++;
+            }
         }
 
         if (rewardHours > 0) {
             visitor.addRewardHours(rewardHours);
-            System.out.println("You have earned " + rewardHours + " free hours for your reservations!");
+            System.out.println("You have earned " + rewardHours + " free hour(s) for your reservations!");
         } else {
             System.out.println("No rewards earned yet.");
         }
@@ -747,11 +810,13 @@ public class SystemManager {
         FileHandler.saveVisitors("CoWorkingSpace/src/services/visitors.txt", visitors);
     }
 
+    // -------> Admin Operations
+
     public void adminMenu(Scanner scanner) {
         System.out.print("Enter admin name: ");
-        String name = scanner.nextLine();
+        String name = scanner.nextLine().trim();
         System.out.print("Enter admin password: ");
-        String password = scanner.nextLine();
+        String password = scanner.nextLine().trim();
 
         if (admin.getName().equals(name) && admin.getPassword().equals(password)) {
             System.out.println("Admin logged in successfully!");
@@ -773,10 +838,18 @@ public class SystemManager {
             System.out.println("7. Calculate Total Fees");
             System.out.println("8. Update Entity");
             System.out.println("9. Leader Board");
-            System.out.println("10. Logout");
+            System.out.println("10. Empty Safe");
+            System.out.println("11. Logout");
             System.out.print("Choose an option: ");
-            int choice = scanner.nextInt();
-            scanner.nextLine();
+            String input = scanner.nextLine().trim();
+            int choice;
+
+            try {
+                choice = Integer.parseInt(input);
+            } catch (NumberFormatException e) {
+                System.out.println("Invalid input! Please enter a number corresponding to the options.");
+                continue;
+            }
 
             switch (choice) {
                 case 1 -> addSlot(scanner);
@@ -788,61 +861,76 @@ public class SystemManager {
                 case 7 -> calculateTotalFees();
                 case 8 -> updateEntity(scanner);
                 case 9 -> LeaderBoardForAdmin(scanner);
-                case 11 -> emptySafe(scanner);
-                case 12 -> {
+                case 10 -> emptySafe(scanner);
+                case 11 -> {
                     System.out.println("Logging out...");
                     return;
                 }
-                default -> System.out.println("Invalid choice. Try again.");
+                default -> System.out.println("Invalid choice. Please try again.");
             }
             savedata();
         }
     }
 
     public void addSlot(Scanner scanner) {
-        System.out.println("Enter the fees of the slot you want to create: ");
-        double selectedFees = scanner.nextDouble();
-        scanner.nextLine();
+        System.out.print("Enter the fees of the slot you want to create: ");
+        String feeInput = scanner.nextLine().trim();
+        double selectedFees;
 
-        System.out.println("Enter the time (hh:mm) of the slot you want to create: ");
-        String timeInput = scanner.nextLine();
-
-        System.out.println("Enter the date (yyyy-mm-dd) of the slot you want to create: ");
-        String dateInput = scanner.nextLine();
-
-        LocalDate NewDate;
-        LocalTime NewTime;
         try {
-            NewDate = LocalDate.parse(dateInput, DATE_FORMATTER);
-            NewTime= LocalTime.parse(timeInput, TIME_FORMATTER);
+            selectedFees = Double.parseDouble(feeInput);
+            if (selectedFees < 0) {
+                System.out.println("Fees cannot be negative.");
+                return;
+            }
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid fee format. Please enter a numeric value.");
+            return;
+        }
+
+        System.out.print("Enter the time (HH:mm) of the slot you want to create: ");
+        String timeInput = scanner.nextLine().trim();
+        System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to create: ");
+        String dateInput = scanner.nextLine().trim();
+
+        LocalDate newDate;
+        LocalTime newTime;
+        try {
+            newDate = LocalDate.parse(dateInput, DATE_FORMATTER);
+            newTime = LocalTime.parse(timeInput, TIME_FORMATTER);
         } catch (DateTimeParseException e) {
             System.out.println("Invalid date/time format: " + e.getMessage());
             return;
         }
 
-        
-        
+        Slot newSlot = new Slot(newTime, newDate, selectedFees, true);
+        System.out.print("Enter the ID of the Room you want to create a slot in: ");
+        String roomIdInput = scanner.nextLine().trim();
+        int roomID;
 
-        Slot newSlot = new Slot(NewTime, NewDate, selectedFees, true);
-        System.out.println("Enter the ID of the Room you want to create a slot in: ");
-        int roomID = scanner.nextInt();
-        scanner.nextLine();
-
-        Room selectedRoom = null;
-        for (Room room : rooms) {
-            if (room.getID() == roomID) {
-                selectedRoom = room;
-                break;
-            }
+        try {
+            roomID = Integer.parseInt(roomIdInput);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Room ID format. Please enter a numeric value.");
+            return;
         }
 
+        Room selectedRoom = findRoomById(roomID);
         if (selectedRoom == null) {
             System.out.println("Invalid Room ID. Slot creation failed.");
             return;
         }
 
+        // Check for duplicate slot
+        for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
+            if (slot.getDate().equals(newDate) && slot.getTime().equals(newTime)) {
+                System.out.println("A slot at this date and time already exists in the selected room.");
+                return;
+            }
+        }
+
         selectedRoom.addSlotVisitors(newSlot);
-        System.out.println("Slot added successfully to " + selectedRoom.getName());
+        System.out.println("Slot added successfully to " + selectedRoom.getName() + ".");
 
         FileHandler.saveRooms("CoWorkingSpace/src/services/rooms.txt", rooms);
     }
@@ -853,8 +941,15 @@ public class SystemManager {
         System.out.println("2. Delete Room");
         System.out.println("3. Delete Slot");
         System.out.print("Choose an option: ");
-        int choice = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int choice;
+
+        try {
+            choice = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid input! Please enter a number corresponding to the options.");
+            return;
+        }
 
         switch (choice) {
             case 1 -> deleteVisitor(scanner);
@@ -866,8 +961,15 @@ public class SystemManager {
 
     private void deleteVisitor(Scanner scanner) {
         System.out.print("Enter Visitor ID to delete: ");
-        int visitorId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int visitorId;
+
+        try {
+            visitorId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Visitor ID format. Please enter a numeric value.");
+            return;
+        }
 
         Visitor visitorToDelete = null;
         for (Visitor visitor : visitors) {
@@ -882,6 +984,7 @@ public class SystemManager {
             return;
         }
 
+        // Remove visitor from all slots
         for (Room room : rooms) {
             for (Slot slot : room.getVisitorsInEachSlot().keySet()) {
                 if (!slot.isAvailable()) {
@@ -896,8 +999,15 @@ public class SystemManager {
 
     private void deleteRoom(Scanner scanner) {
         System.out.print("Enter Room ID to delete: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int roomId;
+
+        try {
+            roomId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Room ID format. Please enter a numeric value.");
+            return;
+        }
 
         Room roomToDelete = null;
         for (Room room : rooms) {
@@ -918,17 +1028,17 @@ public class SystemManager {
 
     private void deleteSlot(Scanner scanner) {
         System.out.print("Enter Room ID where the slot is located: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String roomIdInput = scanner.nextLine().trim();
+        int roomId;
 
-        Room selectedRoom = null;
-        for (Room room : rooms) {
-            if (room.getID() == roomId) {
-                selectedRoom = room;
-                break;
-            }
+        try {
+            roomId = Integer.parseInt(roomIdInput);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Room ID format. Please enter a numeric value.");
+            return;
         }
 
+        Room selectedRoom = findRoomById(roomId);
         if (selectedRoom == null) {
             System.out.println("Room not found.");
             return;
@@ -936,14 +1046,14 @@ public class SystemManager {
 
         System.out.println("Available Slots in " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
-            System.out.println("Date: " + slot.getDate() + ", Time: " + slot.getTime());
+            System.out.println("  Date: " + slot.getDate().format(DATE_FORMATTER) + ", Time: " + slot.getTime().format(TIME_FORMATTER));
         }
+
         System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to delete: ");
-        String dateInput = scanner.nextLine();
-        System.out.print("Enter the time (hh:mm) of the slot you want to delete: ");
-        String timeInput = scanner.nextLine();
-    
-        Slot slotToDelete=null;
+        String dateInput = scanner.nextLine().trim();
+        System.out.print("Enter the time (HH:mm) of the slot you want to delete: ");
+        String timeInput = scanner.nextLine().trim();
+
         LocalDate selectedDate;
         LocalTime selectedTime;
         try {
@@ -954,9 +1064,11 @@ public class SystemManager {
             return;
         }
 
+        Slot slotToDelete = null;
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
-            if(slot.getDate().equals(selectedDate)&&slot.getTime().equals(selectedTime)){
-                slotToDelete=slot;
+            if (slot.getDate().equals(selectedDate) && slot.getTime().equals(selectedTime)) {
+                slotToDelete = slot;
+                break;
             }
         }
 
@@ -982,7 +1094,7 @@ public class SystemManager {
             System.out.println("Room Type: " + room.getClass().getSimpleName() + ", Room ID: " + room.getID() + ", Room Name: " + room.getName());
             for (Slot slot : room.getVisitorsInEachSlot().keySet()) {
                 if (slot.isAvailable()) {
-                    System.out.println("  Date: " + slot.getDate() + ", Time: " + slot.getTime() + ", Fees: $" + slot.getFees());
+                    System.out.println("  Date: " + slot.getDate().format(DATE_FORMATTER) + ", Time: " + slot.getTime().format(TIME_FORMATTER) + ", Fees: $" + slot.getFees());
                 }
             }
         }
@@ -1016,31 +1128,37 @@ public class SystemManager {
         double totalGeneralUnpayed = 0;
         double totalMeetingUnpayed = 0;
         double totalTeachingUnpayed = 0;
-        double totalGeneralpayed = 0;
-        double totalMeetingpayed = 0;
-        double totalTeachingpayed = 0;
-        for (Visitor visitor : visitors) {
-            if(visitor.getType().equals("general")){
-                totalGeneralUnpayed+=visitor.getTotalFees();
-                totalGeneralpayed+=visitor.getPayedFees();
-            }else if(visitor.getType().equals("formal")){
-                totalMeetingUnpayed+=visitor.getPayedFees();
-                totalMeetingUnpayed+=visitor.getTotalFees();
-            }else{
-                totalTeachingUnpayed+=visitor.getTotalFees();
-                totalTeachingUnpayed+=visitor.getPayedFees();
+        double totalGeneralPayed = 0;
+        double totalMeetingPayed = 0;
+        double totalTeachingPayed = 0;
 
+        for (Visitor visitor : visitors) {
+            switch (visitor.getType().toLowerCase()) {
+                case "general":
+                    totalGeneralUnpayed += visitor.getTotalFees();
+                    totalGeneralPayed += visitor.getPayedFees();
+                    break;
+                case "formal":
+                    totalMeetingUnpayed += visitor.getTotalFees();
+                    totalMeetingPayed += visitor.getPayedFees();
+                    break;
+                case "instructor":
+                    totalTeachingUnpayed += visitor.getTotalFees();
+                    totalTeachingPayed += visitor.getPayedFees();
+                    break;
+                default:
+                    // Handle other types if any
+                    break;
             }
         }
 
-
         System.out.println("\n--- Total Fees Collected ---");
-        System.out.println("General Rooms Unpayed: $" + totalGeneralUnpayed +" General Rooms Payed: $" + totalGeneralpayed);
-        System.out.println("Meeting Rooms Unpayed: $" + totalMeetingUnpayed + " Meeting Rooms Payed: $" + totalMeetingpayed);
-        System.out.println("Teaching Rooms Unpayed: $" + totalTeachingUnpayed + " Teaching Rooms Payed: $" + totalTeachingpayed);
-        System.out.println("General Rooms TotalExpected: $" + totalGeneralUnpayed+totalGeneralpayed);
-        System.out.println("Meeting Rooms TotalExpected: $" + totalMeetingUnpayed + totalMeetingpayed);
-        System.out.println("Teaching Rooms TotalExpected: $" + totalTeachingUnpayed + totalTeachingpayed);
+        System.out.println("General Rooms - Unpaid: $" + totalGeneralUnpayed + ", Paid: $" + totalGeneralPayed);
+        System.out.println("Meeting Rooms - Unpaid: $" + totalMeetingUnpayed + ", Paid: $" + totalMeetingPayed);
+        System.out.println("Teaching Rooms - Unpaid: $" + totalTeachingUnpayed + ", Paid: $" + totalTeachingPayed);
+        System.out.println("General Rooms - Total Expected: $" + (totalGeneralUnpayed + totalGeneralPayed));
+        System.out.println("Meeting Rooms - Total Expected: $" + (totalMeetingUnpayed + totalMeetingPayed));
+        System.out.println("Teaching Rooms - Total Expected: $" + (totalTeachingUnpayed + totalTeachingPayed));
     }
 
     public void updateEntity(Scanner scanner) {
@@ -1049,8 +1167,15 @@ public class SystemManager {
         System.out.println("2. Update Room");
         System.out.println("3. Update Slot");
         System.out.print("Choose an option: ");
-        int choice = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int choice;
+
+        try {
+            choice = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid input! Please enter a number corresponding to the options.");
+            return;
+        }
 
         switch (choice) {
             case 1 -> updateVisitor(scanner);
@@ -1062,8 +1187,15 @@ public class SystemManager {
 
     private void updateVisitor(Scanner scanner) {
         System.out.print("Enter Visitor ID to update: ");
-        int visitorId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int visitorId;
+
+        try {
+            visitorId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Visitor ID format. Please enter a numeric value.");
+            return;
+        }
 
         Visitor visitorToUpdate = null;
         for (Visitor visitor : visitors) {
@@ -1080,14 +1212,14 @@ public class SystemManager {
 
         System.out.println("Current Name: " + visitorToUpdate.getName());
         System.out.print("Enter new name (or press Enter to keep current): ");
-        String newName = scanner.nextLine();
+        String newName = scanner.nextLine().trim();
         if (!newName.isEmpty()) {
             visitorToUpdate.setName(newName);
         }
 
         System.out.println("Current Password: " + visitorToUpdate.getPassword());
         System.out.print("Enter new password (or press Enter to keep current): ");
-        String newPassword = scanner.nextLine();
+        String newPassword = scanner.nextLine().trim();
         if (!newPassword.isEmpty()) {
             visitorToUpdate.setPassword(newPassword);
         }
@@ -1098,24 +1230,27 @@ public class SystemManager {
         System.out.println("2. Formal");
         System.out.println("3. Instructor");
         System.out.print("Choose an option: ");
-        String typeInput = scanner.nextLine();
+        String typeInput = scanner.nextLine().trim();
+
         if (!typeInput.isEmpty()) {
             int typeChoice;
             try {
                 typeChoice = Integer.parseInt(typeInput);
-                String newType = switch (typeChoice) {
-                    case 1 -> "general";
-                    case 2 -> "formal";
-                    case 3 -> "instructor";
-                    default -> {
-                        System.out.println("Invalid choice! Keeping current type.");
-                        yield visitorToUpdate.getType();
-                    }
-                };
-                visitorToUpdate.setType(newType);
             } catch (NumberFormatException e) {
                 System.out.println("Invalid input! Keeping current type.");
+                typeChoice = -1;
             }
+
+            String newType = switch (typeChoice) {
+                case 1 -> "general";
+                case 2 -> "formal";
+                case 3 -> "instructor";
+                default -> {
+                    System.out.println("Invalid choice! Keeping current type.");
+                    yield visitorToUpdate.getType();
+                }
+            };
+            visitorToUpdate.setType(newType);
         }
 
         System.out.println("Visitor updated successfully.");
@@ -1123,17 +1258,17 @@ public class SystemManager {
 
     private void updateRoom(Scanner scanner) {
         System.out.print("Enter Room ID to update: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String input = scanner.nextLine().trim();
+        int roomId;
 
-        Room roomToUpdate = null;
-        for (Room room : rooms) {
-            if (room.getID() == roomId) {
-                roomToUpdate = room;
-                break;
-            }
+        try {
+            roomId = Integer.parseInt(input);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Room ID format. Please enter a numeric value.");
+            return;
         }
 
+        Room roomToUpdate = findRoomById(roomId);
         if (roomToUpdate == null) {
             System.out.println("Room not found.");
             return;
@@ -1141,7 +1276,7 @@ public class SystemManager {
 
         System.out.println("Current Room Name: " + roomToUpdate.getName());
         System.out.print("Enter new room name (or press Enter to keep current): ");
-        String newName = scanner.nextLine();
+        String newName = scanner.nextLine().trim();
         if (!newName.isEmpty()) {
             roomToUpdate.setName(newName);
         }
@@ -1149,21 +1284,21 @@ public class SystemManager {
         if (roomToUpdate instanceof TeachingRoom teachingRoom) {
             System.out.println("Current Projector Type: " + teachingRoom.getProjectorType());
             System.out.print("Enter new projector type (or press Enter to keep current): ");
-            String newProjector = scanner.nextLine();
+            String newProjector = scanner.nextLine().trim();
             if (!newProjector.isEmpty()) {
                 teachingRoom.setProjectorType(newProjector);
             }
 
             System.out.println("Current Board Type: " + teachingRoom.getBoardType());
             System.out.print("Enter new board type (or press Enter to keep current): ");
-            String newBoard = scanner.nextLine();
+            String newBoard = scanner.nextLine().trim();
             if (!newBoard.isEmpty()) {
                 teachingRoom.setBoardType(newBoard);
             }
 
             System.out.println("Current Instructor Name: " + teachingRoom.getInstructorName());
             System.out.print("Enter new instructor name (or press Enter to keep current): ");
-            String newInstructor = scanner.nextLine();
+            String newInstructor = scanner.nextLine().trim();
             if (!newInstructor.isEmpty()) {
                 teachingRoom.setInstructorName(newInstructor);
             }
@@ -1174,17 +1309,17 @@ public class SystemManager {
 
     private void updateSlot(Scanner scanner) {
         System.out.print("Enter Room ID where the slot is located: ");
-        int roomId = scanner.nextInt();
-        scanner.nextLine();
+        String roomIdInput = scanner.nextLine().trim();
+        int roomId;
 
-        Room selectedRoom = null;
-        for (Room room : rooms) {
-            if (room.getID() == roomId) {
-                selectedRoom = room;
-                break;
-            }
+        try {
+            roomId = Integer.parseInt(roomIdInput);
+        } catch (NumberFormatException e) {
+            System.out.println("Invalid Room ID format. Please enter a numeric value.");
+            return;
         }
 
+        Room selectedRoom = findRoomById(roomId);
         if (selectedRoom == null) {
             System.out.println("Room not found.");
             return;
@@ -1192,15 +1327,14 @@ public class SystemManager {
 
         System.out.println("Available Slots in " + selectedRoom.getName() + ":");
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
-            System.out.println("Date: " + slot.getDate() + ", Time: " + slot.getTime() + ", Fees: $" + slot.getFees());
+            System.out.println("  Date: " + slot.getDate().format(DATE_FORMATTER) + ", Time: " + slot.getTime().format(TIME_FORMATTER) + ", Fees: $" + slot.getFees());
         }
 
-        System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to delete: ");
-        String dateInput = scanner.nextLine();
-        System.out.print("Enter the time (hh:mm) of the slot you want to delete: ");
-        String timeInput = scanner.nextLine();
-    
-        Slot slotToUpdate=null;
+        System.out.print("Enter the date (yyyy-mm-dd) of the slot you want to update: ");
+        String dateInput = scanner.nextLine().trim();
+        System.out.print("Enter the time (HH:mm) of the slot you want to update: ");
+        String timeInput = scanner.nextLine().trim();
+
         LocalDate selectedDate;
         LocalTime selectedTime;
         try {
@@ -1211,6 +1345,7 @@ public class SystemManager {
             return;
         }
 
+        Slot slotToUpdate = null;
         for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
             if (slot.getDate().equals(selectedDate) && slot.getTime().equals(selectedTime)) {
                 slotToUpdate = slot;
@@ -1223,54 +1358,104 @@ public class SystemManager {
             return;
         }
 
-        System.out.println("Current Time: " + slotToUpdate.getTime().format(TIME_FORMATTER));
-        System.out.print("Enter new time (HH:mm) or press Enter to keep current: ");
-        String newTimeInput = scanner.nextLine();
-        if (!newTimeInput.isEmpty()) {
-            try {
-                LocalTime newTime = LocalTime.parse(newTimeInput, TIME_FORMATTER);
-                slotToUpdate.setTime(newTime);
-                System.out.println("Time updated successfully.");
-            } catch (DateTimeParseException e) {
-                System.out.println("Invalid time format! Keeping current time.");
-            }
-        }
-
-
+        // Update Fees
         System.out.println("Current Fees: $" + slotToUpdate.getFees());
         System.out.print("Enter new fees (or press Enter to keep current): ");
-        String feesInput = scanner.nextLine();
+        String feesInput = scanner.nextLine().trim();
         if (!feesInput.isEmpty()) {
             try {
                 double newFees = Double.parseDouble(feesInput);
-                slotToUpdate.setFees(newFees);
+                if (newFees < 0) {
+                    System.out.println("Fees cannot be negative. Keeping current fees.");
+                } else {
+                    slotToUpdate.setFees(newFees);
+                    System.out.println("Fees updated successfully.");
+                }
             } catch (NumberFormatException e) {
                 System.out.println("Invalid input! Keeping current fees.");
             }
         }
 
+        // Update Availability
         System.out.println("Current Availability: " + (slotToUpdate.isAvailable() ? "Available" : "Reserved"));
         System.out.print("Enter new availability (true/false) or press Enter to keep current: ");
-        String availabilityInput = scanner.nextLine();
+        String availabilityInput = scanner.nextLine().trim();
         if (!availabilityInput.isEmpty()) {
             if (availabilityInput.equalsIgnoreCase("true") || availabilityInput.equalsIgnoreCase("false")) {
                 boolean newAvailability = Boolean.parseBoolean(availabilityInput);
                 slotToUpdate.setAvailable(newAvailability);
+                System.out.println("Availability updated successfully.");
             } else {
                 System.out.println("Invalid input! Keeping current availability.");
+            }
+        }
+
+        // Update Date and Time
+        System.out.println("Current Date: " + slotToUpdate.getDate().format(DATE_FORMATTER));
+        System.out.print("Enter new date (yyyy-mm-dd) or press Enter to keep current: ");
+        String newDateInput = scanner.nextLine().trim();
+        if (!newDateInput.isEmpty()) {
+            try {
+                LocalDate newDate = LocalDate.parse(newDateInput, DATE_FORMATTER);
+                // Check if new date and time combination already exists
+                boolean duplicate = false;
+                for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
+                    if (slot.getDate().equals(newDate) && slot.getTime().equals(slotToUpdate.getTime())) {
+                        duplicate = true;
+                        break;
+                    }
+                }
+                if (!duplicate) {
+                    slotToUpdate.setDate(newDate);
+                    System.out.println("Date updated successfully.");
+                } else {
+                    System.out.println("A slot with the new date and current time already exists. Date not updated.");
+                }
+            } catch (DateTimeParseException e) {
+                System.out.println("Invalid date format! Keeping current date.");
+            }
+        }
+
+        System.out.println("Current Time: " + slotToUpdate.getTime().format(TIME_FORMATTER));
+        System.out.print("Enter new time (HH:mm) or press Enter to keep current: ");
+        String newTimeInput = scanner.nextLine().trim();
+        if (!newTimeInput.isEmpty()) {
+            try {
+                LocalTime newTime = LocalTime.parse(newTimeInput, TIME_FORMATTER);
+                // Check if new date and time combination already exists
+                boolean duplicate = false;
+                for (Slot slot : selectedRoom.getVisitorsInEachSlot().keySet()) {
+                    if (slot.getDate().equals(slotToUpdate.getDate()) && slot.getTime().equals(newTime)) {
+                        duplicate = true;
+                        break;
+                    }
+                }
+                if (!duplicate) {
+                    slotToUpdate.setTime(newTime);
+                    System.out.println("Time updated successfully.");
+                } else {
+                    System.out.println("A slot with the current date and new time already exists. Time not updated.");
+                }
+            } catch (DateTimeParseException e) {
+                System.out.println("Invalid time format! Keeping current time.");
             }
         }
 
         System.out.println("Slot updated successfully.");
     }
 
-    public void LeaderBoardForAdmin(Scanner scanner){
+    public void LeaderBoardForAdmin(Scanner scanner) {
         LeaderBoardForVisitor();
-        System.out.println("Do you want to applay the reward:");
+        System.out.print("Do you want to apply the reward? (yes/no): ");
         String response = scanner.nextLine().trim().toLowerCase();
-    
+
         if (response.equals("yes") || response.equals("y")) {
-            this.visitors.getFirst().addRewardHours(7);
+            if (!visitors.isEmpty()) {
+                visitors.get(0).addRewardHours(7);
+                System.out.println("Reward applied to the top visitor.");
+            } else {
+                System.out.println("No visitors available to apply the reward.");
+            }
         } else if (response.equals("no") || response.equals("n")) {
             System.out.println("Leader Board Has Been Checked.");
         } else {
@@ -1278,18 +1463,19 @@ public class SystemManager {
         }
     }
 
-
-    public void emptySafe(Scanner scanner){
-        System.out.println("Do You Want To Empty The Safe?");
+    public void emptySafe(Scanner scanner) {
+        System.out.print("Do you want to empty the safe? (yes/no): ");
         String response = scanner.nextLine().trim().toLowerCase();
-    
+
         if (response.equals("yes") || response.equals("y")) {
             for (Visitor visitor : visitors) {
                 visitor.setPayedFees(0);
             }
+            System.out.println("Safe has been emptied successfully.");
             System.out.println("بقينا علي الحميد المجيد");
         } else if (response.equals("no") || response.equals("n")) {
-            System.out.println("البضاهة معايا");
+            System.out.println("Safe remains unchanged.");
+            System.out.println("البضاهة معايا"); 
         } else {
             System.out.println("Invalid input. Please enter 'yes' or 'no'.");
         }
